--- a/package.json
+++ b/package.json
@@ -4,35 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server -d --hot --env.dev",
+    "dev": "webpack-dev-server -d --hot --port 8097 --env.dev",
     "build": "rm -rf dist && webpack --env.production"
   },
   "author": "cheris",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.2.1",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-latest": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.27.0",
     "eslint": "^3.17.1",
     "eslint-config-enough": "^0.2.5",
     "eslint-loader": "^1.6.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
-  },
-  "eslintConfig": {
-    "extends": "enough",
-    "env": {
-      "browser": true,
-      "node": true
-    }
   }
 }
