--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "base_project",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Simple & Fast webpack2 project Base On ES2015+",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server -d --hot --port 8097 --env.dev",
+    "dev": "webpack-dev-server -d --hot --env.dev --port 8097",
     "build": "rm -rf dist && webpack --env.production"
   },
   "author": "cheris",
@@ -27,6 +27,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "less-loader": "^3.0.0",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
